--- a/Ubiquitous2/packages.config
+++ b/Ubiquitous2/packages.config
@@ -4,6 +4,7 @@
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="Fluent.Ribbon" version="2.0.2" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
+  <package id="Microsoft.Tpl.Dataflow" version="4.5.23" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.0.0.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
   <package id="Sparrow.Chart.Wpf" version="13.1.0.118" targetFramework="net45" />
