--- a/Ubiquitous2/packages.config
+++ b/Ubiquitous2/packages.config
@@ -13,5 +13,5 @@
   <package id="System.Data.SQLite.EF6" version="1.0.94.0" targetFramework="net45" />
   <package id="System.Data.SQLite.Linq" version="1.0.94.1" targetFramework="net45" />
   <package id="WebSocket4Net" version="0.10" targetFramework="net45" />
-  <package id="WpfAnimatedGif" version="1.4.9" targetFramework="net45" />
+  <package id="WriteableBitmapEx" version="1.0.13.0" targetFramework="net45" />
 </packages>
