--- a/Ubiquitous2/Ubiquitous2.csproj
+++ b/Ubiquitous2/Ubiquitous2.csproj
@@ -265,6 +265,7 @@
     <Compile Include="Utils\Css.cs" />
     <Compile Include="Utils\DeviceHelper.cs" />
     <Compile Include="Utils\Random.cs" />
+    <Compile Include="Utils\Text.cs" />
     <Compile Include="Utils\Url.cs" />
     <Compile Include="ViewModel\DashBoardViewModel.cs" />
     <Compile Include="ViewModel\HelloPlaceHolderViewModel.cs" />
