Youtube vector icon, possible memory leak fix

--- a/Ubiquitous2/Ubiquitous2.csproj
+++ b/Ubiquitous2/Ubiquitous2.csproj
@@ -1083,6 +1083,7 @@
     <Content Include="Content\twitchemoticons.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Resource Include="View\Image1.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="ubiquitous smile.ico">
