--- a/Ubiquitous2/Ubiquitous2.csproj
+++ b/Ubiquitous2/Ubiquitous2.csproj
@@ -252,6 +252,7 @@
     <Compile Include="Model\IOBSPluginService.cs" />
     <Compile Include="Model\IStreamPageDataService.cs" />
     <Compile Include="Model\IStreamTopic.cs" />
+    <Compile Include="Model\NativeMethods.cs" />
     <Compile Include="Model\OBSPluginService.cs" />
     <Compile Include="Model\OBSRemoteService.cs" />
     <Compile Include="Model\StreamInfo.cs" />
