--- a/Ubiquitous2PluginInstaller/Ubiquitous2PluginInstaller.csproj
+++ b/Ubiquitous2PluginInstaller/Ubiquitous2PluginInstaller.csproj
@@ -62,7 +62,8 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>xedoc.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -107,7 +108,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="xedoc.pfx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
