Certificate installer, Hitbox user list, stats DB update, various fixes

--- a/Ubiquitous2/app.config
+++ b/Ubiquitous2/app.config
@@ -58,7 +58,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="UbiquitousContext" connectionString="Data Source=|DBFolder|\ubiquitous.sqlite" providerName="System.Data.SQLite.EF6" />
+    <add name="UbiquitousContext" connectionString="Data Source='|DataDirectory|\ubiquitous.sqlite'" providerName="System.Data.SQLite.EF6" />
   </connectionStrings>
 
 </configuration>
